TEST_PROGRAMS/INVALID/04/13.go
package main

func main() {
    //Illegal multiple chars in rune
    var x = '  '
    x++ // "use" x
}
